--- a/html-css/module-01/css/style.css
+++ b/html-css/module-01/css/style.css
@@ -8,6 +8,15 @@
   text-decoration-line: none;
 }
 
+#logo {
+  width: 10%;
+  margin: 0 0 0 30px;
+}
+
+#logo a:hover {
+  
+}
+
 body {
   width: 960px;
 }
@@ -75,7 +84,7 @@ img {
 .button_text {
   font-size: 20px;
   color: #626262;
-  margin: 60px 0 20px 0;
+  margin-top: 60px;
   padding: 20px 30px;
   background-color: #fff;
   border: 1px solid;
