--- a/githome/css/style.css
+++ b/githome/css/style.css
@@ -9,10 +9,17 @@ body {
   background-color: #eae7e3;
 }
 
+#header_wrap {
+  width: 100%;
+  background: linear-gradient(to top, #97b2ec, #debc84);
+  border: 1px solid;
+  padding: 10px 0 10px 0;
+}
+
 header {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 60%;
 }
 
 header p {
@@ -20,24 +27,53 @@ header p {
   font-size: 30px;
 }
 
+#forkme_banner {
+  padding: 10px 50px 10px 10px;
+  color: #fff;
+  background: url(/githome/img/blacktocat.png) #f56969 no-repeat 95% 50%;
+  font-weight: 700;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+  margin-right: 0%;
+}
+
+#nav_wrap {
+  padding: 20px;
+}
+
 nav {
-  text-align: center;
-  margin-top: 20px;
-  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.nav_wrap_list {
   background-color: #eaf9f4;
   border: 1px solid;
+  margin: 10px;
+  padding: 30px;
 }
 
-nav ul li {
+.nav_wrap_list a {
   font-size: 25px;
-  padding: 10px 0 10px 0;
-}
-
-nav ul li a {
   color: black;
 }
 
-nav ul li a:hover {
+.nav_wrap_list a:hover {
   color: rgb(121, 199, 43);
   text-decoration: underline;
+}
+
+.nav_wrap_list_border {
+  background-color: #eaf9f4;
+  padding: 100px;
+}
+
+.nav_wrap_list:hover {
+  background: linear-gradient(to top, #97b2ec, #debc84);
+}
+
+.nav_wrap_list_border:hover {
+  border: 1px solid;
 }
