--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -4,91 +4,92 @@
   list-style: none;
 }
 
+.container {
+  max-width: 904px;
+  margin: 0 auto;
+}
+
+.navigation {
+  margin: 70px 0 100px 0;
+  text-align: center;
+}
+
+.navigation li {
+  display: inline-block;
+  margin-right: 100px;
+}
+
+.navigation li:last-child {
+  margin-right: 0;
+}
+
+.navigation a {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-family: "Playfair Display", serif;
+  font-size: 14px;
+  color: #626262;
+}
+
+.navigation a:hover {
+  color: #03a9f4;
+}
+
 .carcass {
-    display: inline-block;
-    width: 420px;
+  display: inline-block;
+  width: 420px;
+  margin-bottom: 135px;
 }
 
-body {
-    max-width: 904px;
-    margin: 0 auto;
+.carcass:nth-last-child(2),
+.carcass:nth-last-child(3) {
+  margin-bottom: 55px;
 }
 
-nav {
-    margin-top: 70px;
-    text-align: center;
+.carcass:nth-child(2n + 1) {
+  margin-right: 60px;
 }
 
-nav li {
-    display: inline-block;
-    margin-right: 100px;
-}
-
-nav li:last-child {
-    margin-right: 0;
-}
-
-nav a {
-    text-transform: uppercase;
-    text-decoration: none;
-    font-family: "Playfair Display", serif;
-    font-size: 14px;
-    color: #626262;
-}
-
-nav a:hover {
-    color: #03a9f4;
+.img {
+  margin-bottom: 30px;
 }
 
 .caption {
-    text-transform: uppercase;
-    font-family: "Ubuntu", sans-serif;
-    font-size: 14px;
-    color: #b4ad9e;
+  text-transform: uppercase;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 14px;
+  color: #b4ad9e;
+  margin-bottom: 30px;
 }
 
 .headline {
-    font-family: "Playfair Display", serif;
-    font-size: 30px;
-    color: #626262;
+  font-family: "Playfair Display", serif;
+  font-size: 30px;
+  color: #626262;
+  margin-bottom: 30px;
 }
 
 .text {
-    font-family: "Playfair Display", serif;
-    font-size: 14px;
-    color: #626262;
+  font-family: "Playfair Display", serif;
+  font-size: 14px;
+  line-height: 24px;
+  color: #626262;
 }
 
 .button {
-    text-align: center;
+  text-align: center;
 }
 
 button {
-    font-family: "Playfair Display", serif;
-    font-size: 20px;
-    color: #626262;
-    background-color: #fff;
-    border: 1px solid #626262;
-    padding: 20px 35px;
-    margin: 25px 0 70px 0;
+  font-family: "Playfair Display", serif;
+  font-size: 20px;
+  color: #626262;
+  background-color: #fff;
+  border: 1px solid #626262;
+  padding: 20px 35px;
+  margin-bottom: 70px;
 }
 
 span {
-    display: none;
-}
-
-.mr_60 {
-    margin-right: 60px;
-}
-
-.mb_30 {
-    margin-bottom: 30px;
-}
-
-.mb_100 {
-    margin-bottom: 100px;
-}
-
-.mb_135 {
-    margin-bottom: 135px;
+  display: none;
 }
