--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -5,12 +5,13 @@
 }
 
 .container {
-  max-width: 904px;
+  max-width: 900px;
   margin: 0 auto;
 }
 
 .navigation {
-  margin: 70px 0 100px 0;
+  padding-top: 70px;
+  margin-bottom: 100px;
   text-align: center;
 }
 
@@ -38,16 +39,16 @@
 .carcass {
   display: inline-block;
   width: 420px;
-  margin-bottom: 135px;
+  margin: 0 56px 135px 0;
+}
+
+.carcass:nth-child(2n) {
+  margin-right: 0;
 }
 
 .carcass:nth-last-child(2),
 .carcass:nth-last-child(3) {
   margin-bottom: 55px;
-}
-
-.carcass:nth-child(2n + 1) {
-  margin-right: 60px;
 }
 
 .img {
@@ -76,6 +77,10 @@
   color: #626262;
 }
 
+span {
+  display: none;
+}
+
 .button {
   text-align: center;
 }
@@ -90,6 +95,11 @@ button {
   margin-bottom: 70px;
 }
 
-span {
-  display: none;
+button:hover {
+  background-color: azure;
+  cursor: pointer;
+
+  -webkit-box-shadow: 0px 0px 20px 4px rgba(0, 0, 0, 0.48);
+  -moz-box-shadow: 0px 0px 20px 4px rgba(0, 0, 0, 0.48);
+  box-shadow: 0px 0px 20px 4px rgba(0, 0, 0, 0.48);
 }
