--- a/html-css/module-04/css/style.css
+++ b/html-css/module-04/css/style.css
@@ -65,6 +65,10 @@
   color: #1abc9c;
 }
 
+.gallery {
+  margin-bottom: 70px;
+}
+
 .headline {
   font-family: "Roboto", sans-serif;
   font-weight: 900;
@@ -73,7 +77,11 @@
   text-transform: uppercase;
   color: #515151;
   text-align: center;
-  /* margin-bottom: 30px; */
+  margin-bottom: 90px;
+}
+
+.headline:last-child {
+  margin-bottom: 80px;
 }
 
 .headline::after {
@@ -88,8 +96,15 @@
 
 .box {
   width: 255px;
-  height: 322px;
+  height: 325px;
   background-color: #e9f0fd;
+  float: left;
+  margin: 0 30px 30px 0;
+}
+
+.box:nth-child(5),
+.box:nth-child(9) {
+  margin-right: 0;
 }
 
 .box_bline {
@@ -99,8 +114,13 @@
   font-weight: 900;
   font-size: 18px;
   line-height: 40px;
+  text-transform: uppercase;
   color: #ffffff;
   padding-left: 10px;
+}
+
+.box a:hover > .box_bline {
+  background-color: #1abc9c;
 }
 
 .box_bline h2 {
@@ -109,12 +129,66 @@
 
 .box_square {
   float: right;
-  width: 40px;
-  height: 54px;
-  background-color: #ffffff;
-  opacity: .5;
+  background-color: rgb(255, 255, 255, 0.5);
+  padding: 0 10px;
 }
 
-.box_square p {
-  opacity: 1;
+.blog {
+  margin-bottom: 80px;
+}
+
+.blog_box {
+  width: 351px;
+  height: 500px;
+  float: left;
+  margin: 0 25px 10px 0;
+}
+
+.blog_box:last-child {
+  margin-right: 0;
+}
+
+.blog_box h2 {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 26px;
+  color: #555252;
+  margin-bottom: 25px;
+}
+
+.blog_box h2::after {
+  content: "";
+  background-image: url(../img/line2.png);
+  width: 136px;
+  height: 3px;
+  display: block;
+  margin-top: 10px;
+}
+
+.blog_box p {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 26px;
+  color: #555252;
+  margin-bottom: 15px;
+}
+
+.blog_box button {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 26px;
+  background-color: #4ec6ab;
+  color: #ffffff;
+  border: 0px solid #000000;
+  border-radius: 5px 5px 5px 5px;
+  padding: 20px 40px;
+  cursor: pointer;
+}
+
+.blog_box button:hover {
+  box-shadow: inset 0 0 0 5px #53ea93;
+  opacity: 0.8;
 }
