--- a/html-css/module-04/css/style.css
+++ b/html-css/module-04/css/style.css
@@ -65,11 +65,17 @@
   color: #1abc9c;
 }
 
-.gallery {
+.products {
   margin-bottom: 70px;
 }
 
 .headline {
+  position: relative;
+  padding-bottom: 30px;
+  margin-bottom: 90px;
+}
+
+.headline p {
   font-family: "Roboto", sans-serif;
   font-weight: 900;
   font-size: 48px;
@@ -77,39 +83,36 @@
   text-transform: uppercase;
   color: #515151;
   text-align: center;
-  margin-bottom: 90px;
 }
 
 .headline:last-child {
   margin-bottom: 80px;
 }
 
-.headline::after {
+.headline p::after {
   content: "";
   background-color: #1abc9c;
   width: 164px;
   height: 7px;
-  display: block;
-  margin: auto;
-  margin-top: 30px;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  margin-left: -75px;
 }
 
 .box {
   width: 255px;
-  height: 325px;
   background-color: #e9f0fd;
   float: left;
   margin: 0 30px 30px 0;
 }
 
-.box:nth-child(5),
-.box:nth-child(9) {
+.box:nth-child(4n) {
   margin-right: 0;
 }
 
 .box_bline {
   background-color: #323232;
-  height: 40px;
   font-family: "Roboto", sans-serif;
   font-weight: 900;
   font-size: 18px;
@@ -119,12 +122,12 @@
   padding-left: 10px;
 }
 
-.box a:hover > .box_bline {
-  background-color: #1abc9c;
+.box_bline a {
+  color: #ffffff;
 }
 
-.box_bline h2 {
-  float: left;
+.box:hover > .box_bline {
+  background-color: #1abc9c;
 }
 
 .box_square {
@@ -139,9 +142,8 @@
 
 .blog_box {
   width: 351px;
-  height: 500px;
   float: left;
-  margin: 0 25px 10px 0;
+  margin-right: 28px;
 }
 
 .blog_box:last-child {
@@ -188,7 +190,20 @@
   cursor: pointer;
 }
 
-.blog_box button:hover {
+.button {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 26px;
+  background-color: #4ec6ab;
+  color: #ffffff;
+  border: 0px solid #000000;
+  border-radius: 5px 5px 5px 5px;
+  padding: 20px 40px;
+  display: inline-block;
+}
+
+.button:hover {
   box-shadow: inset 0 0 0 5px #53ea93;
   opacity: 0.8;
 }
