--- a/html-css/module-04/css/style.css
+++ b/html-css/module-04/css/style.css
@@ -26,15 +26,12 @@
 }
 
 .navigation_logo a {
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  font-size: 30px;
-  line-height: 32px;
+  font: 300 30px/32px "Roboto", sans-serif;
   color: #555252;
   text-transform: uppercase;
 }
 
-.navigation_logo a span {
+.navigation_logo a::first-letter {
   font-weight: 900;
   color: #1abc9c;
 }
@@ -53,10 +50,7 @@
 }
 
 .navigation_menu a {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 11px;
+  font: 700 14px/11px "Open Sans", sans-serif;
   color: #0f0101;
   text-transform: uppercase;
 }
@@ -70,16 +64,12 @@
 }
 
 .headline {
-  position: relative;
   padding-bottom: 30px;
   margin-bottom: 90px;
 }
 
 .headline p {
-  font-family: "Roboto", sans-serif;
-  font-weight: 900;
-  font-size: 48px;
-  line-height: 32px;
+  font: 900 48px/34px "Roboto", sans-serif;
   text-transform: uppercase;
   color: #515151;
   text-align: center;
@@ -91,18 +81,16 @@
 
 .headline p::after {
   content: "";
-  background-color: #1abc9c;
+  background: #1abc9c;
   width: 164px;
   height: 7px;
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  margin-left: -75px;
+  display: block;
+  margin: 30px auto 0;
 }
 
 .box {
   width: 255px;
-  background-color: #e9f0fd;
+  background: #e9f0fd;
   float: left;
   margin: 0 30px 30px 0;
 }
@@ -112,28 +100,30 @@
 }
 
 .box_bline {
-  background-color: #323232;
-  font-family: "Roboto", sans-serif;
-  font-weight: 900;
-  font-size: 18px;
-  line-height: 40px;
   text-transform: uppercase;
+  background: #323232;
   color: #ffffff;
-  padding-left: 10px;
+  font-size: 0;
 }
 
 .box_bline a {
+  font: 900 18px/40px "Roboto", sans-serif;
   color: #ffffff;
+  width: 190px;
+  padding-left: 10px;
+  display: inline-block;
 }
 
 .box:hover > .box_bline {
-  background-color: #1abc9c;
+  background: #1abc9c;
 }
 
-.box_square {
+.box_cost {
+  font: 900 18px/40px "Roboto", sans-serif;
   float: right;
-  background-color: rgb(255, 255, 255, 0.5);
+  background: rgb(255, 255, 255, 0.5);
   padding: 0 10px;
+  display: block;
 }
 
 .blog {
@@ -151,10 +141,7 @@
 }
 
 .blog_box h2 {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 26px;
+  font: 600 18px/26px "Open Sans", sans-serif;
   color: #555252;
   margin-bottom: 25px;
 }
@@ -169,33 +156,14 @@
 }
 
 .blog_box p {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 26px;
+  font: 400 14px/26px "Open Sans", sans-serif;
   color: #555252;
   margin-bottom: 15px;
 }
 
-.blog_box button {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 26px;
-  background-color: #4ec6ab;
-  color: #ffffff;
-  border: 0px solid #000000;
-  border-radius: 5px 5px 5px 5px;
-  padding: 20px 40px;
-  cursor: pointer;
-}
-
 .button {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 26px;
-  background-color: #4ec6ab;
+  font: 300 16px/26px "Open Sans", sans-serif;
+  background: #4ec6ab;
   color: #ffffff;
   border-radius: 5px 5px 5px 5px;
   padding: 20px 40px;
