--- a/html-css/module-05/css/style.css
+++ b/html-css/module-05/css/style.css
@@ -1,9 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:300,900&display=swap");
 
 /* Container style */
-.container_header {
+.container {
   width: 1110px;
-  background-color: #ffffff;
   margin: 0 auto;
 }
 
@@ -49,4 +48,71 @@
 
 .menu li a:hover {
   color: #1abc9c;
+}
+
+.slider_wrap {
+  background: #323232;
+  margin-bottom: 100px;
+}
+
+.slider {
+  width: 1600px;
+  height: 600px;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+  background-color: #000002;
+}
+
+.slide1 {
+  background: url(../img/slide.png);
+  width: 1600px;
+  height: 600px;
+  opacity: 0.52;
+}
+
+.slider-text {
+  position: absolute;
+  top: 200px;
+  left: 430px;
+}
+
+.slider-text p:first-child {
+  font: 900 60px/82px "Roboto", sans-serif;
+  letter-spacing: -0.03em;
+  color: #ffffff;
+}
+
+.slider-text p:last-child {
+  font: 300 24px/54px "Roboto", sans-serif;
+  letter-spacing: -0.02em;
+  color: #ffffff;
+}
+
+.slider button {
+  width: 104px;
+  height: 104px;
+  background-color: rgb(78, 198, 171, 0.65);
+  position: absolute;
+  top: 225px;
+  border: 0 solid;
+}
+
+.slider button:nth-of-type(1) {
+  left: 245px;
+  background-image: url(../img/arrow_left.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.slider button:nth-of-type(2) {
+  right: 245px;
+  background-image: url(../img/arrow_right.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.slider button:hover {
+  background-color: #1abc9c;
+  opacity: 1;
 }
