--- a/html-css/module-05/css/style.css
+++ b/html-css/module-05/css/style.css
@@ -52,7 +52,6 @@
 
 .slider_wrap {
   background: #323232;
-  margin-bottom: 100px;
 }
 
 .slider {
@@ -115,4 +114,128 @@
 .slider button:hover {
   background-color: #1abc9c;
   opacity: 1;
+}
+
+.main {
+  background-color: #e9f0fd;
+  padding: 100px 0;
+}
+
+.headline {
+  font: 900 48px/34px Roboto, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: -0.02em;
+  color: #515151;
+  text-align: center;
+  position: relative;
+  padding-bottom: 37px;
+  margin-bottom: 80px;
+}
+
+.headline::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 164px;
+  height: 7px;
+  background-color: #1abc9c;
+}
+
+.box-item {
+  display: inline-block;
+  margin-right: 30px;
+}
+
+.box-item:last-child {
+  margin-left: 0;
+}
+
+.box-rectangle {
+  width: 255px;
+  background-color: #323232;
+}
+
+.box-rectangle a {
+  font: 900 18px/40px Roboto, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: -0.02em;
+  color: #ffffff;
+  display: inline-block;
+  padding-left: 10px;
+  width: 190px;
+}
+
+.box-cost {
+  font: 900 18px/40px Roboto, sans-serif;
+  color: #ffffff;
+  width: 54px;
+  background-color: rgb(255, 255, 255, 0.43);
+  display: block;
+  text-align: center;
+  float: right;
+}
+
+.box-item:hover .box-rectangle {
+  background-color: #1abc9c;
+}
+
+.box-item a {
+  position: relative;
+}
+
+.box-card {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 235px;
+  height: 261px;
+  background-color: rgb(0, 0, 0, 0.54);
+  border: 10px solid #ffffff;
+}
+
+.box-card-items {
+  width: 235px;
+    height: 261px;
+  position: relative;
+}
+
+.box-card-items ul {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.box-card ul li {
+  width: 50px;
+  height: 50px;
+  border: 1px solid #ffffff;
+  position: relative;
+  margin-right: 10px;
+  display: inline-block;
+  font: 400 14px/32px OpenSans, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: -0.02em;
+  color: #ffffff;
+}
+
+.box-card ul li:nth-of-type(3) {
+  margin-right: 0;
+}
+
+.box-card ul li:nth-of-type(4) {
+  width: 182px;
+  height: 50px;
+  background-color: #323232;
+  margin: 10px 0 0 0;
+}
+
+.box-card ul li img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
