--- a/html-css/module-05/css/style.css
+++ b/html-css/module-05/css/style.css
@@ -3,8 +3,10 @@
 /* Container style */
 .container {
   width: 1110px;
+  height: 100%;
   margin: 0 auto;
   padding: 0 15px;
+  position: relative;
 }
 
 /* Logo and Navigation */
@@ -56,75 +58,58 @@
 
 /* Static slider */
 .slider_wrap {
-  background: #323232;
-}
-
-.slider {
-  width: 1600px;
+  width: 100%;
   height: 600px;
   margin: 0 auto;
-  position: relative;
-  overflow: hidden;
-  background: url(../img/slide.png);
+  background: url(../img/slide.png) no-repeat center;
 }
 
-.slider::after {
-  content: "";
+.slider_navigation {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
-  height: 100%;
-  z-index: 1;
-  background-color: rgb(0, 0, 2, 0.52);
+  text-align: center;
 }
 
-.slider-text {
-  position: absolute;
-  top: 200px;
-  left: 430px;
-  width: 730px;
-  z-index: 2;
-}
-
-.slider-text h2 {
+.slider_navigation h2 {
   font: 900 60px/82px "Roboto", sans-serif;
   letter-spacing: -0.03em;
   color: #ffffff;
-  z-index: 2;
+  display: inline-block;
 }
 
-.slider-text p:last-child {
+.slider_navigation p {
   font: 300 24px/54px "Roboto", sans-serif;
   letter-spacing: -0.02em;
   color: #ffffff;
+  display: inline-block;
 }
 
-.slider button {
+.slider_navigation button {
   width: 104px;
   height: 104px;
   background-color: rgb(78, 198, 171, 0.65);
-  position: absolute;
-  top: 225px;
   border: 0 solid;
-  z-index: 2;
+  display: inline-block;
 }
 
-.slider button:nth-of-type(1) {
-  left: 245px;
+.slider_navigation button:nth-of-type(1) {
   background-image: url(../img/arrow_left.png);
   background-repeat: no-repeat;
   background-position: center;
+  float: left;
 }
 
-.slider button:nth-of-type(2) {
-  right: 245px;
+.slider_navigation button:nth-of-type(2) {
   background-image: url(../img/arrow_right.png);
   background-repeat: no-repeat;
   background-position: center;
+  float: right;
 }
 
-.slider button:hover {
+.slider_navigation button:hover {
   background-color: #1abc9c;
   opacity: 1;
 }
