--- a/html-css/module-05/css/style.css
+++ b/html-css/module-05/css/style.css
@@ -70,21 +70,25 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  text-align: center;
+  /* text-align: center; */
+}
+
+.slider_text {
+  margin: 0 auto;
+  width: 730px;
+  margin-bottom: 70px;
 }
 
 .slider_navigation h2 {
   font: 900 60px/82px "Roboto", sans-serif;
   letter-spacing: -0.03em;
   color: #ffffff;
-  display: inline-block;
 }
 
 .slider_navigation p {
   font: 300 24px/54px "Roboto", sans-serif;
   letter-spacing: -0.02em;
   color: #ffffff;
-  display: inline-block;
 }
 
 .slider_navigation button {
@@ -92,21 +96,23 @@
   height: 104px;
   background-color: rgb(78, 198, 171, 0.65);
   border: 0 solid;
-  display: inline-block;
+  position: absolute;
+  top: 40%;
+  transform: translate(0, -50%);
 }
 
 .slider_navigation button:nth-of-type(1) {
   background-image: url(../img/arrow_left.png);
   background-repeat: no-repeat;
   background-position: center;
-  float: left;
+  left: 0;
 }
 
 .slider_navigation button:nth-of-type(2) {
   background-image: url(../img/arrow_right.png);
   background-repeat: no-repeat;
   background-position: center;
-  float: right;
+  right: 0;
 }
 
 .slider_navigation button:hover {
