--- a/githome/css/style.css
+++ b/githome/css/style.css
@@ -1,4 +1,24 @@
-* {
+header::after {
+  content: "";
+  background: url(../img/back.png);
+  width: 1366px;
+  height: 737px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* * {
   margin: 0 auto;
   list-style: none;
   text-decoration: none;
@@ -76,4 +96,4 @@ nav {
 
 .nav_wrap_list_border:hover {
   border: 1px solid;
-}
+} */
