--- a/html-css/module-05/css/style.css
+++ b/html-css/module-05/css/style.css
@@ -58,10 +58,25 @@
 
 /* Static slider */
 .slider_wrap {
+  /* background: #323232; */
   width: 100%;
   height: 600px;
   margin: 0 auto;
-  background: url(../img/slide.png) no-repeat center;
+  background: url(../img/slide.png) no-repeat center  #323232;
+  position: relative;
+  overflow: hidden;
+}
+
+
+.slider_wrap::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgb(0, 0, 2, 0.52);
 }
 
 .slider_navigation {
@@ -70,6 +85,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
+  z-index: 2;
 }
 
 .slider_text {
@@ -150,6 +166,7 @@
 .box-item {
   display: inline-block;
   margin-right: 26px;
+  width: 235px;
 }
 
 .box-item:nth-of-type(4n) {
@@ -161,8 +178,8 @@
 }
 
 .box-shadow {
-  width: 235px;
-  height: 262px;
+  /* width: 235px;
+  height: 262px; */
   display: none;
   position: absolute;
   top: 50%;
