--- a/html-css/module-05/css/style.css
+++ b/html-css/module-05/css/style.css
@@ -2,8 +2,7 @@
 
 /* Container style */
 .container {
-  width: 1110px;
-  height: 100%;
+  width: 1140px;
   margin: 0 auto;
   padding: 0 15px;
   position: relative;
@@ -58,15 +57,13 @@
 
 /* Static slider */
 .slider_wrap {
-  /* background: #323232; */
   width: 100%;
   height: 600px;
   margin: 0 auto;
-  background: url(../img/slide.png) no-repeat center  #323232;
+  background: url(../img/slide.png) no-repeat center #323232;
   position: relative;
   overflow: hidden;
 }
-
 
 .slider_wrap::after {
   content: "";
@@ -77,6 +74,10 @@
   height: 100%;
   z-index: 1;
   background-color: rgb(0, 0, 2, 0.52);
+}
+
+.slider_wrap .container {
+  height: 100%;
 }
 
 .slider_navigation {
@@ -166,7 +167,7 @@
 .box-item {
   display: inline-block;
   margin-right: 26px;
-  width: 235px;
+  width: 255px;
 }
 
 .box-item:nth-of-type(4n) {
@@ -178,14 +179,13 @@
 }
 
 .box-shadow {
-  /* width: 235px;
-  height: 262px; */
   display: none;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0%;
+  left: 0;
   border: 10px solid rgb(255, 255, 255, 0.54);
+  width: 100%;
+  height: 100%;
 }
 
 .box-shadow::after {
@@ -205,6 +205,7 @@
   left: 50%;
   transform: translate(-50%, 0);
   z-index: 2;
+  font-size: 0;
 }
 
 .icon {
@@ -212,9 +213,10 @@
   height: 48px;
   border: 1px solid #ffffff;
   position: relative;
-  margin: 0 12px 7px 0;
+  margin: 0 19px 7px 0;
   display: inline-block;
   cursor: pointer;
+  vertical-align: top;
 }
 
 .icon:nth-child(3) {
@@ -254,6 +256,7 @@
   width: 182px;
   background-color: #323232;
   padding: 0;
+  cursor: pointer;
 }
 
 .icon_basket {
@@ -297,7 +300,7 @@
   color: #ffffff;
   display: inline-block;
   padding-left: 10px;
-  width: 190px;
+  width: 201px;
 }
 
 .box-cost {
