--- a/html-css/module-06/css/style.css
+++ b/html-css/module-06/css/style.css
@@ -65,7 +65,7 @@ font-family: "Roboto", sans-serif;
   margin-bottom: 60px;
 }
 
-.headline:last-child {
+.headline:nth-last-of-type(2) {
   margin-bottom: 40px;
 }
 
@@ -92,4 +92,50 @@ font-family: "Roboto", sans-serif;
   width: 60px;
   height: 3px;
   margin-top: 40px;
+}
+
+.services_wrap {
+  margin-bottom: 90px;
+}
+
+.services_items {
+  display: flex;
+  height: 228px;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-content: space-between;
+}
+
+.services-item {
+  display: flex;
+  flex-basis: 350px;
+}
+
+.services-item img {
+  width: 32px;
+  height: 32px;
+  margin-right: 27px;
+}
+
+.services-item h3 {
+  font: 400 14px "Montserrat";
+  color: rgb(51, 51, 51);
+  text-transform: uppercase;
+  line-height: 1.2;
+}
+
+.services-item p {
+  font: 400 15px "Roboto";
+  color: rgb(153, 153, 153);
+  line-height: 1.6;
+}
+
+.headline-text {
+  font: 400 15px "Roboto";
+  color: rgb(153, 153, 153);
+  line-height: 1.6;
+  text-align: center;
+  text-align: center;
+  width: 80%;
+  margin: 0 auto 80px;
 }
