--- a/html-css/module-06/css/style.css
+++ b/html-css/module-06/css/style.css
@@ -1,9 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto:300i,400&display=swap");
-/* 
-font-family: "Montserrat", sans-serif;
-font-family: "Kaushan Script", cursive;
-font-family: "Roboto", sans-serif; 
-*/
 
 .container {
   width: 1231px;
@@ -64,10 +59,6 @@ font-family: "Roboto", sans-serif;
   margin-bottom: 60px;
 }
 
-/* .headline:nth-of-type(3) {
-  margin-bottom: 40px;
-} */
-
 .headline h2 {
   font: 24px "Kaushan Script";
   color: rgb(51, 51, 51);
@@ -119,20 +110,40 @@ font-family: "Roboto", sans-serif;
   flex-basis: 350px;
 }
 
-.services-item img {
-  width: auto;
+.services-item::before {
+  content: "";
+  min-width: 32px;
   height: 32px;
-  margin-right: 27px;
+  margin-right: 30px;
 }
 
-.services-item h3 {
+.services-item:nth-child(1)::before {
+  background: url(../img/ALARM.png) no-repeat;
+}
+.services-item:nth-child(2)::before {
+  background: url(../img/LINE_GRAPH.png) no-repeat;
+}
+.services-item:nth-child(3)::before {
+  background: url(../img/COMPUTER.png) no-repeat;
+}
+.services-item:nth-child(4)::before {
+  background: url(../img/BOOK.png) no-repeat;
+}
+.services-item:nth-child(5)::before {
+  background: url(../img/HOME.png) no-repeat;
+}
+.services-item:nth-child(6)::before {
+  background: url(../img/IMAGE.png) no-repeat;
+}
+
+.services-item-text h3 {
   font: 400 14px "Montserrat";
   color: rgb(51, 51, 51);
   text-transform: uppercase;
   line-height: 1.2;
 }
 
-.services-item p {
+.services-item-text p {
   font: 400 15px "Roboto";
   color: rgb(153, 153, 153);
   line-height: 1.6;
@@ -147,6 +158,7 @@ font-family: "Roboto", sans-serif;
 .teams_items {
   display: flex;
   flex-direction: column;
+  flex-basis: 380px;
   align-items: center;
 }
 
