Added header content and styles

--- a/html-css/module-10/css/normalize.css
+++ b/html-css/module-10/css/normalize.css
@@ -347,3 +347,13 @@
   [hidden] {
     display: none;
   }
+
+  /* My reset style */
+  li, ul {
+    list-style: none;
+  }
+
+  a {
+    display: block;
+    text-decoration: none;
+  }
