--- a/html-css/module-10/css/normalize.css
+++ b/html-css/module-10/css/normalize.css
@@ -357,3 +357,18 @@
     display: block;
     text-decoration: none;
   }
+
+  html {
+    box-sizing: border-box;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    box-sizing: inherit;
+  }
+  
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
