--- a/html-css/gulp-starter-kit/src/sass/style.scss
+++ b/html-css/gulp-starter-kit/src/sass/style.scss
@@ -29,16 +29,16 @@
   }
 
   &_text h2 {
-    font: 72px $Kaushan_Script;
+    @include KaushanScript(72px);
     color: $color-white;
     text-align: center;
     margin: 0 auto 30px;
   }
 
   &_text h1 {
-    font: 700 150px $Montserrat;
-    line-height: 140px;
+    @include Montserrat700(150px);
     color: $color-white;
+    line-height: 140px;
     text-transform: uppercase;
     max-width: 840px;
     text-align: center;
@@ -47,12 +47,12 @@
 
   &_text a {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     width: 160px;
     height: 40px;
     border: 3.0px solid $color-white;
-    font: 700 14px $Montserrat;
+    @include Montserrat700(14px);
     color: $color-white;
     text-transform: uppercase;
     margin: 0 auto;
@@ -75,13 +75,12 @@
 /* ------------ Navigation menu ------------ */
 
 .navigation {
-  display: flex;
-  justify-content: space-between;
+  @extend %df-jcsb;
   padding-top: 25px;
   margin-bottom: 120px;
 
   &_logo a {
-    font: 700 30px/30px $Montserrat;
+    @include Montserrat700(30px+/30px);
     color: $color-white;
   }
 
@@ -91,7 +90,7 @@
     width: 620px;
 
     &-item a {
-      font: 400 14px $Montserrat;
+      @include Montserrat400(14px);
       color: $color-white;
       line-height: 1.2;
       text-transform: uppercase;
@@ -130,7 +129,7 @@
   margin-bottom: 60px;
 
   h2 {
-    font: 24px $Kaushan_Script;
+    @include KaushanScript(24px);
     color: $color-2;
     line-height: 1.2;
     display: flex;
@@ -146,7 +145,7 @@
   }
 
   span {
-    font: 700 30px $Montserrat;
+    @include Montserrat700(30px);
     color: $color-2;
     text-transform: uppercase;
     line-height: 1.2;
@@ -154,7 +153,7 @@
   }
 
   p {
-    font: 400 15px $Roboto;
+    @include Roboto400(15px);
     color: $color-3;
     line-height: 1.6;
     text-align: center;
@@ -211,7 +210,7 @@
 
       &-text {
         h3 {
-          font: 400 14px $Montserrat;
+          @include Montserrat400(14px);
           color: $color-2;
           text-transform: uppercase;
           line-height: 1.2;
@@ -219,7 +218,7 @@
         }
 
         p {
-          font: 400 15px $Roboto;
+          @include Roboto400(15px);
           color: $color-3;
           line-height: 1.6;
         }
@@ -229,8 +228,7 @@
 }
 
 .teams {
-  display: flex;
-  justify-content: space-between;
+  @extend %df-jcsb;
   margin-bottom: 80px;
 
   &_items {
@@ -240,7 +238,7 @@
     align-items: center;
 
     h3 {
-      font: 400 14px $Montserrat;
+      @include Montserrat400(14px);
       text-transform: uppercase;
       color: $color-5;
       padding: 25px 0 10px;
@@ -248,7 +246,7 @@
     }
 
     h4 {
-      font: 300 15px/24px $Roboto;
+      @include Roboto300(15px+/24px);
       color: $color-6;
       margin: 0;
     }
@@ -330,8 +328,7 @@
 }
 
 footer {
-  display: flex;
-  justify-content: space-between;
+  @extend %df-jcsb;
   align-items: center;
   flex-flow: row wrap;
   padding-bottom: 10px;
@@ -344,7 +341,7 @@ footer {
   }
 
   p {
-    font: 400 14px $Montserrat;
+    @include Montserrat400(14px);
     color: $color-6;
     margin: 0;
     padding-top: 10px;
@@ -370,14 +367,14 @@ footer {
     }
 
     input[type="text"]::placeholder {
-      font: 300 15px/35px $Roboto;
+      @include Roboto300(15px+/35px);
       font-style: italic;
       color: $color-12;
     }
 
     input[type="button"] {
       background-color: $color-13;
-      font: 700 14px $Montserrat;
+      @include Montserrat700(14px);
       text-transform: uppercase;
       color: $color-white;
       padding: 11px 30px;
